<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <TextView
        android:id="@+id/MainActivity_textViewMessage"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_toStartOf="@+id/MainActivity_imageButtonAnalytics"
        android:background="@drawable/ic_topgreenheadingbg"
        android:gravity="center_vertical"
        android:paddingLeft="10dp"
        android:text="@string/MainActivity_Message"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/MainActivity_textViewGoodCardMessage"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_below="@+id/MainActivity_textViewMessage"
        android:background="@drawable/ic_topgreenheadingbg"
        android:drawableLeft="@android:drawable/btn_star_big_on"
        android:gravity="center_vertical"
        android:text="@string/MainActivity_goodcardmsg"
        android:textColor="@android:color/white" >

    </TextView>

    <ImageButton
        android:id="@+id/MainActivity_imageButtonAnalytics"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_toLeftOf="@+id/MainActivity_imageButtonSetting"
        android:background="@drawable/ic_topgreenheadingbg"
        android:contentDescription="@string/mainactivity_Analytics"
        android:onClick="OnViewAnalyticsClick"
        android:src="@drawable/ic_action_analytics" />
    
    <ImageButton
        android:id="@+id/MainActivity_imageButtonSetting"
        android:layout_width="40dp"
        android:layout_height="50dp"
        android:layout_alignParentRight="true"
        android:background="@drawable/ic_topgreenheadingbg"
        android:contentDescription="@string/MainActivity_Share"
        android:onClick="OnSettingClicked"
        android:src="@android:drawable/ic_dialog_info" />
    

    <com.google.android.gms.ads.AdView
	    android:id="@+id/MainScreen_adView"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_alignParentBottom="true"
	    android:layout_alignParentLeft="true"
	    ads:adSize="BANNER"
	    ads:adUnitId="@string/ad_unit_id_Main"
	    android:background="@android:color/black" />
  
      <ListView
          android:id="@+id/MainActivity_listViewSMSList"
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:layout_above="@id/MainScreen_adView"
          android:layout_alignParentLeft="true"
          android:layout_below="@+id/MainActivity_textViewGoodCardMessage"
          android:background="@drawable/ic_midbluebg" >
			
    </ListView>
    
    
	
</RelativeLayout>