<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="5dp" >

    <ImageView
        android:id="@+id/smslistrow_imageViewcard"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:contentDescription="@string/smsrowlist_cardimage"
        android:src="@drawable/ic_credit_card_hand" />

    <TextView
        android:id="@+id/smslayoutrow_textViewBank"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/smslistrow_imageViewcard"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_toRightOf="@+id/smslistrow_imageViewcard"
        android:text="@string/smslayoutrow_textViewSender"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/smslayoutrow_textViewCard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/smslistrow_imageViewcard"
        android:layout_marginLeft="14dp"
        android:layout_marginTop="10dp"
        android:layout_toRightOf="@+id/smslayoutrow_textViewBank"
        android:text="@string/smslayoutrow_textViewBody"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@android:color/white" />

    <ImageView
        android:id="@+id/smslistrow_imageViewIndicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_marginRight="20dp"
        android:contentDescription="@string/smslistrow_indicator"
        android:src="@android:drawable/btn_star_big_on" />

    <ProgressBar
        android:id="@+id/smslistrow_progressBarLimit"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/smslistrow_imageViewcard"
        android:layout_alignLeft="@+id/smslayoutrow_textViewBank"
        android:layout_below="@+id/smslayoutrow_textViewBank"
        android:layout_toStartOf="@+id/smslistrow_imageViewIndicator" />

</RelativeLayout>