<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context="${relativePackage}.${activityClass}" >

    <Button
        android:id="@+id/aboutscu_buttonMyCardNotListed"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/ic_midbluebg"
        android:onClick="CardNotListedClicked"
        android:text="@string/aboutscu_mycardnotlisted"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/aboutscu_Share"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/aboutscu_buttonMyCardNotListed"
        android:layout_marginTop="10dp"
        android:background="@drawable/ic_midbluebg"
        android:onClick="OnShareClicked"
        android:text="@string/aboutscu_Share"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/aboutscu_SendFeedback"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/aboutscu_Share"
        android:layout_marginTop="10dp"
        android:background="@drawable/ic_midbluebg"
        android:onClick="OnSendFeedbackClicked"
        android:text="@string/aboutscu_SendFeedback"
        android:textColor="@android:color/white" />
    
</RelativeLayout>
